--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 네트워크 통신-->
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,10 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SOPT_KAKAOPAY"
+        android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait"
         tools:targetApi="31">
+        <!-- 서버파트가 HTTPS로 해주면 usesCleartextTraffic 삭제-->
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.DummyActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
