[CHORE] 의존성 수정

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
+import org.jlleitschuh.gradle.ktlint.tasks.GenerateReportsTask
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-alias(libs.plugins.androidApplication) apply false
-    alias(libs.plugins.jetbrainsKotlinAndroid) apply false
+    alias(libs.plugins.android.application) apply false //project layer
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.ktlint)
+}
+
+ktlint {
+    version.set("0.47.1")
+    verbose.set(true)
+    android.set(true)
+}
+
+tasks.withType(GenerateReportsTask).configureEach {
+    finalizedBy(tasks.named("ktlintFormat"))
 }
