--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:theme="@style/Base.Theme.SOPT_KAKAOPAY"
         android:screenOrientation="portrait"
         tools:targetApi="31">
         <!-- 서버파트가 HTTPS로 해주면 usesCleartextTraffic 삭제-->
