add: viewpager2, dotindicator 의존성 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation(platform(libs.okhttp.bom))
     implementation(libs.okhttp)
     implementation(libs.okhttp.logging.interceptor)
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "com.tbuonomo:dotsindicator:5.0"
 }
